--- a/.project
+++ b/.project
@@ -7,11 +7,13 @@
 	<buildSpec>
 		<buildCommand>
 			<name>org.eclipse.jdt.core.javabuilder</name>
+                        <name>com.aptana.ide.core.unifiedBuilder</name>
 			<arguments>
 			</arguments>
 		</buildCommand>
 	</buildSpec>
 	<natures>
 		<nature>org.eclipse.jdt.core.javanature</nature>
+                <nature>com.aptana.projects.webnature</nature>
 	</natures>
 </projectDescription>
